# nlp-genre-classification

./: app.py  data_processing.ipynb  deberta.ipynb  main.py  model.ipynb  pyproject.toml  topic-modeling-main.ipynb  topic-modeling6.ipynb  topic_modeling2.ipynb
features/: genres.pkl
models/: genre_classifier.pkl  label_encoder.pkl  tfidf_vectorizer.pkl
models/bertopic_imdb_model/: topics.json
