[project]
name = "nlp-genre-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
    "pip>=24.0",
    "setuptools>=70.0",
    "wheel>=0.43.0",
]
