[project]
name = "nlp-genre-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
    "streamlit>=1.44.1",
    "pip>=24.0",
    "setuptools>=70.0",
    "wheel>=0.45.1",
    "torch>=2.7.0",
    "matplotlib>=3.10.3",
    "iterative-stratification>=0.1.9",
    "umap-learn>=0.5.7",
    "transformers>=4.52.4",
]
